<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- Facebook login -->
    <string name="facebook_app_id" translatable="false">4110727392277145</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb4110727392277145</string>
    <string name="facebook_application_id" translatable="false">4110727392277145</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb4110727392277145</string>

    <!-- Main Activity - Sign in -->
    <string name="connection_succeed">Successful authentication !</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection !</string>
    <string name="error_unknown_error">An unknown error has occurred&#8230;</string>

    <!-- Navigation bar -->
    <string name="title_mapview">MapView</string>
    <string name="title_listview">ListView</string>
    <string name="title_workmates">Workmates</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_yourLunch">Your Lunch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="call_txt">CALL</string>
    <string name="like_txt">LIKE</string>
    <string name="website_txt">WEBSITE</string>
    <string name="activity_details_message">You haven\'t chosen a restaurant yet</string>

    <!-- Notifications -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="channel_name" translatable="false">Channel Go4Lunch</string>
    <string name="channel_description" translatable="false">Today lunch Go4Lunch</string>
    <string name="notification_title">Your lunch</string>
    <string name="topic" translatable="false">your_lunch</string>

    <!-- Menu -->
    <string name="menu_title_search">Search</string>
    <string name="menu_title_chat">Chat</string>

    <!-- Permissions -->
    <string name="permissions_granted">Permission already granted</string>
    <string name="request_permissions">Please grant the location permission</string>

    <!-- ListView Fragment-->
    <string name="listView_restaurant_open">Open</string>
    <string name="listView_restaurant_close">Close</string>

    <!-- Mapview Fragment-->
    <string name="location_not_found">Location not found</string>

    <!-- Workmates Fragment-->
    <string name="is_eating_at">is eating at</string>
    <string name="hasnt_decided_yet">hasn\'t decided yet</string>

    <!-- Settings Activity-->
    <string name="settings_hint_last_name">Last name</string>
    <string name="settings_hint_first_name">First name</string>
    <string name="settings_hint_email">Email</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_description_notifications_switch">Notify me every day with my lunch information</string>
    <string name="settings_button_save">Save changes</string>
    <string name="settings_button_reset_password">Reset password</string>
    <string name="settings_button_delete_account">Delete account</string>
    <string name="settings_validity_email">Not a valid email address !</string>
    <string name="settings_validity_first_name">Not a valid first name !</string>
    <string name="settings_validity_last_name">Not a valid last name !</string>
    <string name="settings_email_sent">We sent you an email !</string>
    <!-- Alert dialog setting -->
    <string name="settings_alert_title">"Are you sure ?"</string>
    <string name="settings_alert_message">"Do you really want to delete your account ?"</string>
    <string name="settings_alert_validation">"OK"</string>
    <string name="settings_alert_cancel">"Cancel"</string>
    <string name="settings_alert_confirmation">Account deleted !</string>

    <!-- Chat Activity-->
    <string name="chat_hint_enter_message">Enter message</string>
    <string name="chat_button_send">Send</string>


    <!-- Content Description-->
    <string name="description_image_restaurant">photo of the restaurant</string>
    <string name="description_details_act_btn">button to validate</string>
    <string name="description_details_star1">rating first star</string>
    <string name="description_details_star2">rating second star</string>
    <string name="description_details_star3">rating third star</string>
    <string name="description_details_call_img">call button</string>
    <string name="description_details_like_img">like button</string>
    <string name="description_details_website_img">website link button</string>
    <string name="description_details_list_workmates">profile picture of the user</string>
    <string name="description_settings_profile_picture">profile picture current user</string>
    <string name="description_workmates_logo">logo workmates</string>
    <string name="description_listView_photo_restaurant">photo of the restaurant</string>
</resources>