<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/nav_mapview">

    <fragment
        android:id="@+id/nav_mapview"
        android:label="@string/title_mapview"
        tools:layout="@layout/fragment_mapview"
        android:name="com.dimitri.remoiville.go4lunch.view.fragment.mapview.MapViewFragment"/>

    <fragment
        android:id="@+id/nav_listview"
        android:name="com.dimitri.remoiville.go4lunch.view.fragment.listview.ListViewFragment"
        android:label="@string/title_listview"
        tools:layout="@layout/fragment_listview" />

    <fragment
        android:id="@+id/nav_workmates"
        android:name="com.dimitri.remoiville.go4lunch.view.fragment.workmates.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_workmates" />

    <fragment
        android:id="@+id/nav_yourLunch"
        android:name="com.dimitri.remoiville.go4lunch.view.fragment.yourlunch.YourLunchFragment"
        android:label="@string/menu_yourLunch"
        tools:layout="@layout/fragment_yourlunch" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.dimitri.remoiville.go4lunch.view.fragment.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>